<?xml version="1.0"?>
<package format="2">
  <name>mypkg</name>
  <version>0.0.0</version>
  <description>The mypkg package</description>

  <maintainer email="kayusy25258@outlook.jp">Yuya Kawashima</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>

</package>
